traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:11: error: ')' expected but integer literal found.
      cpt += 1
             ^